--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -484,7 +484,15 @@
       "quality0": "We acknowledge the poor quality of these scans, which might be difficult to read or in the wrong order, and we apologize for it. We think these might still be useful for scholarship and make them available, while searching for higher quality ones.",
       "fairUseIA1": "This work is <bold>copyrighted<\/bold>. As a result, BDRC can only make very limited portions available for private research and study. The full text of the work is viewable on Internet Archive, a close partner of ours, through their Open Library program.",
       "fairUseIA2": "Access this work on Internet Archive",
-      "not": "Images not available."
+      "not": "Images not available.",
+      "fairuse1": "BDRC <bold>restricts access<\/bold> to this work (only the first and last 20 images are available online) because the work is under <bold>copyright<\/bold>.",
+      "fairuse2": "Please contact",
+      "fairuse3": "for information about possibly accessing this work under fair use.",
+      "sealed": "BDRC <bold>restricts access<\/bold> to this work because it was provided to BDRC on the condition that we respect <bold>traditional restrictions<\/bold> applied to it. If you have received the proper transmission from a spiritual teacher to access this work or have other questions about how to access this work please contact",
+      "limited20": "Access limited to first & last 20 pages.",
+      "notyet": "Images not yet available.",
+      "generic": "BDRC has restricted access to this work in accordance with our access policies. You can read those policies here: <policies href='https://bdrc.io/access-policies/' target='_blank'>https://bdrc.io/access-policies/<\/policies>",
+      "OCR": "These etexts were created through OCR (optical character recognition), not manually input, and have not been edited. OCR for Tibetan script is not 100% perfect but it is accurate enough to create text that will enhance the BDRC database. We hope that etexts like these improve the discoverability and usefulness of the BDRC archive for you."
    },
    "location": {
       "beginV": "起始卷{{num}}",
@@ -493,5 +501,18 @@
       "endV": "结束卷{{num}}",
       "endP": "结束页{{num}}",
       "endL": "结束行{{num}}"
-   }
+   },
+   "footer": {
+      "BDRC": "Buddhist Digital Resource Center",
+      "adr1": "1430 Massachusetts Ave., 5th floor",
+      "adr2": "Cambridge, MA, USA 02138",
+      "adr": "Mailing address:<br/>198 Tremont St. #421<br/>Boston, MA, USA 02116",
+      "contact": "CONTACT US",
+      "connect": "Connect with us on social media",
+      "print": "Order printed copies of works referenced on our website",
+      "order": "Order",
+      "join": "Join our newsletter and stay up-to-date",
+      "subscribe": "Subscribe",
+      "support": "Support our mission of preservation and access"
+      }
 }
