--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -8,7 +8,7 @@
    },
    "home": {
       "BUDA": "བུདྡྷ།",
-      "titleBDRC1": "ནང་བསྟན་",
+      "titleBDRC1": "ནང་བསྟན་b",
       "titleBDRC2": "དཔེ་ཚོགས་",
       "titleBDRC3": "ལྟེ་གནས།",
       "archives1": "བུདྡྷ་དྲ་ཐོག་",
