--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -14,12 +14,12 @@
       "archives1": "བུདྡྷ་དྲ་ཐོག་",
       "archives2": "དཔེ་མཛོད།",
       "by": "ནང་བསྟན་དཔེ་ཚོགས་ལྟེ་གནས་ཀྱིས།",
-      "subtitle": "ནང་བསྟན་གཞུང་ལུགས་ལྟ་ཀློག་རྒྱ་ཆེར་བྱ་སའི་དྲ་སྟེགས་འདི་ནས་ངེད་ཚོགས་པ་གཙོ་བྱས་པའི་ཚོགས་པ་དུ་མས་འཚོལ་བསྡུ་བྱས་པའི་དཔེ་ཆའི་ཤོག་ལྷེ་ས་ཡ་མང་པོ་ལྟ་ཀློག་བྱེད་ཐུབ།",
+      "subtitle": "ནང་བསྟན་གཞུང་ལུགས་ལྟ་ཀློག་རྒྱ་ཆེར་བྱ་སའི་དྲ་སྟེགས་འདི་ནས་ངེད་ཚོགས་པ་གཙོར་བྱས་པའི་ཚོགས་པ་དུ་མས་འཚོལ་བསྡུ་བྱས་པའི་དཔེ་ཆའི་ཤོག་ལྷེ་ས་ཡ་མང་པོ་ལྟ་ཀློག་བྱེད་ཐུབ།",
       "message": "ནང་བསྟན་དཔེ་ཚོགས་ལྟེ་གནས་ཀྱི་དྲ་ཐོག་དཔེ་མཛོད་གསར་པར་ཕེབས་པར་དགའ་བསུ་ཞུ།",
       "submessage": "ཉམས་ཞིབ་ཞིབ་ཚགས་པ་དང་སྔར་ལས་མགྱོགས་པ་ཡོང་ཕྱིར་འདིའི་ནང་ཁྱད་ཆོས་དང་རྒྱུ་ཆ་གསར་པ། ལག་ཆ་གསར་པ་མང་པོ་ཁ་སྣོན་བྱས་ཡོད།",
       "subsubmessage": "ངེད་ཚོགས་པའི་ལས་རིགས་ཀྱི་སྤུས་ཀ་ཇེ་ལེགས་སུ་གཏོང་བར་བསམ་ཚུལ་དང་སློབ་སྟོན་རེ་ཡོད་ཚེ་འདི་ནས་འགོད་རོགས།",
       "subsubmessage_afteremail": ".",
-      "subsubmessage_account1": "བུདྡྷ་དཔེ་མཛོད་ནང་གི་དཔེ་ཆ་ཚང་མ་བལྟ་ཀློག་དང་ཕབ་ལེན་ཆེད་ཐོ་འགོད་བྱེད་དགོས། འདིར་བསྣུན།",
+      "subsubmessage_account1": "བུདྡྷ་དཔེ་མཛོད་ནང་གི་དཔེ་ཆ་ཚང་མ་བལྟ་ཀློག་དང་ཕབ་ལེན་ཆེད་ཐོ་འགོད་བྱེད་དགོས། འདིར་སྣུན།",
       "subsubmessage_account2": "",
       "subsubmessage_account3": "",
       "subsubmessage_account4": "ཐོ་འགོད།",
@@ -120,8 +120,8 @@
       "view": "བཤེར་པར་སྟོན།",
       "scans": "བཤེར་པར་ཡོད།",
       "provided": "མཁོ་འདོན་པ། {{- provider}}",
-      "noImg": "No image available",
-      "lowQuality": "Low quality scans"
+      "noImg": "བཤེར་པར་མེད།",
+      "lowQuality": "བཤེར་འབེབས་སྤུས་ཞན་ཁག"
    },
    "prop": {
       "tmp:bestMatch": "བཙལ་འབྲས་མཐུན་ཤོས།",
@@ -181,23 +181,23 @@
       "tmp:Maps": "ས་ཁྲ།",
       "tmp:BuddhistArt": "ནང་བསྟན་རིགས་གནས།",
       "tmp:other": "གཞན།",
-      "tmp:instanceOfWork": "Version of Work",
+      "tmp:instanceOfWork": "བརྩམས་ཆོས་ཀྱི་ཐོན་རིམ།",
       "tmp:lastSync": "སྤེལ་དུས།",
-      "tmp:versionType": "Version Type",
-      "tmp:standalone": "Standalone",
-      "tmp:partOfVersion": "Part of another Version",
+      "tmp:versionType": "པར་གཞིའི་རིགས།",
+      "tmp:standalone": "རང་རྐྱ་བ།",
+      "tmp:partOfVersion": "དཔེ་གཞི་གཞན་གྱི་ཆ་ཤས།",
       "tmp:inRootInstance": "Instance",
-      "tmp:associatedCentury": "Century",
-      "tmp:associatedAuthorCentury": "Author's Century",
+      "tmp:associatedCentury": "དུས་རབས།",
+      "tmp:associatedAuthorCentury": "མཛད་པ་པོའི་དུས་རབས།",
       "tmp:ontologyProperty": "Ontology Property",
       "tmp:hasRole": "Has Role",
-      "tmp:matchContext": "Match Context",
-      "tmp:titleContext": "Title",
-      "tmp:nameContext": "Name",
-      "tmp:noteMatch": "Note",
-      "tmp:possibleAccess": "Access Possible",
-      "tmp:catalogOnly": "Catalog Only",
-      "tmp:nonReleasedItems": "Non-released items"
+      "tmp:matchContext": "སྐབས་ཐོག་དང་མཐུན་པ་ཁག",
+      "tmp:titleContext": "མཚན་བྱང་།",
+      "tmp:nameContext": "མཚན།",
+      "tmp:noteMatch": "ཟུར་མཆན།",
+      "tmp:possibleAccess": "བལྟ་ཀློག་ཐུབ་པ།",
+      "tmp:catalogOnly": "དཀར་ཆག་ཁོ་ན།",
+      "tmp:nonReleasedItems": "ད་དུང་སྤེལ་མེད་པ་ཁག"
    },
    "result": {
       "open": "ཁ་ཕྱེ།",
@@ -216,8 +216,8 @@
       "hasInstance": "དཔེ་རྒྱུན་ {{count,counttobo}} ཡོད།",
       "hasInstance_plural": "དཔེ་རྒྱུན་ {{count,counttobo}} ཡོད།",
       "assoc": "{{type}} associated with: {{- name}}",
-      "moreres": "More {{txt}} are available, do you want to see them?",
-      "openEin": "Open in Etext",
+      "moreres": "འདི་ལས་' {{txt}} མང་བ་འདུག, དེ་དག་ལ་བལྟ་འདོད་ཡོད་དམ།",
+      "openEin": "འཕྲུལ་ཡིག་ནང་སྟོན།",
       "inEtext": "Results for <key>{{- keyword}}<\/key> <key>[{{language}}]<\/key><br/>in <res href='/show/{{- rid}}'>{{- name}}<\/res>",
       "openO": "Open in Outline"
    },
@@ -467,12 +467,12 @@
       "nbTrans": " ( འགྱུར་མ། {{count}})",
       "nbTrans_plural": " (འགྱུར་མ། {{count}})",
       "openO": "Open on {{src}}",
-      "browsE": "Browse",
+      "browsE": "མིག་བཤེར།",
       "unpag": "The pages of this etext may correspond to page in the original edition, but we cannot provide the exact mapping.",
       "pageN": "p. {{num,counttobo}}",
-      "noAssoc": "No associated resources found",
-      "searchE": "Search in the content of this etext",
-      "mustLogin": "You must be logged in to download PDFs or ZIPs.",
+      "noAssoc": "འདི་དང་འབྲེལ་བའི་རྒྱུ་ཆ་རྙེད་མ་སོང་།",
+      "searchE": "འཕྲུལ་ཡིག་འདིའི་ནང་ཚོལ།",
+      "mustLogin": "ཁྱེད་ཀྱིས་PDFs དང་ZIPs གང་རུང་ཕབ་ལེན་བྱེད་པར་ཐོ་འགོད་ངེས་པར་བྱ་དགོས།",
       "commitV": "View commit history",
       "commitH": "Hide commit history",
       "citation": [
@@ -484,11 +484,11 @@
          }
       ],
       "citationI": "{{lg}} citation",
-      "citationS": "Citation style",
-      "cite": "Cite this item",
-      "clipB": "Copy to clipboard",
-      "clipC": "Citation copied",
-      "export": "Export",
+      "citationS": "ཡོང་ཁུངས་ཀྱི་ཁྱད་ཆོས།",
+      "cite": "འདིའི་ཡོང་ཁུངས།",
+      "clipB": "འདི་ངོ་བཤུ་བྱོས།",
+      "clipC": "ཡོང་ཁུངས་ངོ་བཤུ་བྱས་ཡོད།",
+      "export": "ཕྱིར་འདྲེན།",
       "export2": "Export to {{format}}",
       "exportRIS": "Export a RIS file (for EndNote, ProCite, Reference Manager, Zotero, Mendeley, etc.)",
       "noImages": "BDRC does not have associated images, the record is purely for reference",
