--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -179,7 +179,7 @@
       "tmp:multiLingualTexts": "ནང་བསྟན་སྤྱིའི་གསུང་རབ། (སྐད་རིགས་སྣ་མང་།)",
       "tmp:Bibliographies": "དཔེ་བསྐྲུན་གནས་ཚུལ།",
       "tmp:Maps": "ས་ཁྲ།",
-      "tmp:BuddhistArt": "ནང་བསྟན་རིགས་གནས།",
+      "tmp:BuddhistArt": "ནང་བསྟན་རིག་གནས།",
       "tmp:other": "གཞན།",
       "tmp:instanceOfWork": "བརྩམས་ཆོས་ཀྱི་ཐོན་རིམ།",
       "tmp:lastSync": "སྤེལ་དུས།",
@@ -189,7 +189,7 @@
       "tmp:inRootInstance": "དཔེ་གཞི།",
       "tmp:associatedCentury": "དུས་རབས།",
       "tmp:associatedAuthorCentury": "མཛད་པ་པོའི་དུས་རབས།",
-      "tmp:ontologyProperty": "Ontology Property",
+      "tmp:ontologyProperty": "ཤེས་བྱའི་རིགས་དབྱེ།",
       "tmp:hasRole": "མི་སྣ་ཡོད་པ་དག།",
       "tmp:matchContext": "སྐབས་ཐོག་དང་མཐུན་པ་ཁག",
       "tmp:titleContext": "མཚན་བྱང་།",
@@ -306,7 +306,7 @@
       "hide": "སྦེད།",
       "preview": "སྔོན་ལྟ།",
       "permalink": "དྲ་ཐག",
-      "clipboard": "དྲ་ཐག་བཤུས་ཡོད།\nCTRL+Vབཀོལ་ནས་ཕོབ།",
+      "clipboard": "དྲ་ཐག་བཤུས་ཡོད།\nCTRL+V བཀོལ་ནས་ཕོབ།",
       "from": "",
       "in": "",
       "of": "",
@@ -451,7 +451,7 @@
       "searchO": "དཀར་ཆག་ནང་འཚོལ།",
       "start": "འཚོལ།",
       "reset": "བཙལ་བྱ་སུབ།",
-      "otherN": "Load non-matching subparts",
+      "otherN": "ནང་གསེས་ཆ་ཤས་དང་མི་མཐུན་པ་ལོངས།",
       "scanF": "",
       "etextF": "",
       "openR": "དཔེ་ཐོ།",
@@ -468,13 +468,13 @@
       "nbTrans_plural": " (འགྱུར་མ། {{count}})",
       "openO": "འདིའི་ནང་སྒོ་ཕྱེ། {{src}}",
       "browsE": "མིག་བཤེར།",
-      "unpag": "The pages of this etext may correspond to page in the original edition, but we cannot provide the exact mapping.",
+      "unpag": "འཕྲུལ་ཡིག་གི་ཤོས་ངོས་འདི་ཕལ་ཆེར་མ་ཕྱི་དཔེ་ཆའི་ཤོག་ངོས་ལ་ཐད་ཀར་འབྲེལ་ཡོད་པ་འདྲ། འོན་ཀྱང་། ང་ཚོས་ངེས་གཏན་གྱི་གནས་འབྲེལ་ས་ཁྲ་མཁོ་སྤྲོད་བྱ་མི་ཐུབ།.",
       "pageN": "p. {{num,counttobo}}",
       "noAssoc": "འདི་དང་འབྲེལ་བའི་རྒྱུ་ཆ་རྙེད་མ་སོང་།",
       "searchE": "འཕྲུལ་ཡིག་འདིའི་ནང་ཚོལ།",
       "mustLogin": "ཁྱེད་ཀྱིས་PDFs དང་ZIPs གང་རུང་ཕབ་ལེན་བྱེད་པར་ཐོ་འགོད་ངེས་པར་བྱ་དགོས།",
-      "commitV": "View commit history",
-      "commitH": "Hide commit history",
+      "commitV": "བཀོལ་སྤྱོད་ཀྱི་ལོ་རྒྱུས་སྟོན།",
+      "commitH": "བཀོལ་སྤྱོད་ཀྱི་ལོ་རྒྱུས་སྦེད།",
       "citation": [
          "bibliographic citation",
          {
