edit 'see more' message (#549)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -342,8 +342,8 @@
       "browseA": "Browse all {{count}}",
       "seeI": "See {{count}} version",
       "seeI_plural": "See {{count}} versions",
-      "seeM": "{{count}} more version available, browse all",
-      "seeM_plural": "{{count}} more versions available, browse all"
+      "seeM": "{{count}} more version available",
+      "seeM_plural": "{{count}} more versions available"
    },
    "lang": {
       "en": "English",
