--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -561,7 +561,8 @@
       "quality0": "We acknowledge the poor quality of these scans, which might be difficult to read or in the wrong order, and we apologize for it. We think these might still be useful for scholarship and make them available, while searching for higher quality ones.",
       "fairUseIA1": "This work is <bold>copyrighted<\/bold>. As a result, BDRC can only make very limited portions available for private research and study. The full text of the work is viewable on Internet Archive, a close partner of ours, through their Open Library program.",
       "fairUseIA2": "Access this work on Internet Archive",
-      "not": "Images not available."
+      "not": "Images not available.",
+      "imageN":"(this image is copyrighted and not available)"
    },
    "location": {
       "beginV": "Begin volume: {{num}}",
