upgrade mirador (#554) + add icon in Browse button on Person record (#551)

--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -319,9 +319,7 @@
       "seeR": "བཙལ་འབྲས་ལ་གཟིགས།",
       "seeR_plural": "བཙལ་འབྲས་ལ་གཟིགས།",
       "link": "དྲ་ཐག:",
-      "link_plural": "དྲ་ཐག་ཁག:",
-      "his":"Browse all his works",
-      "her":"Browse all her works"
+      "link_plural": "དྲ་ཐག་ཁག:"
    },
    "lang": {
       "en": "ཨིན་སྐད།",
