--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -528,7 +528,7 @@
       "orderVT": "Copy the text below, click on the following link and paste it in the comments box:",
       "contactVT": "Contact Vimala Treasures",
       "contactVTcopy": "I wish to order 1 copy of {{uri}}",
-      "assoc":"Browse associated works"
+      "assoc":"Associated works"
    },
    "mirador": {
       "return": "return to BUDA",
