--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -460,7 +460,7 @@
       "orderVT": "Copy the text below, click on the following link and paste it in the comments box:",
       "contactVT": "Contact Vimala Treasures",
       "contactVTcopy": "I wish to order 1 copy of {{uri}}",
-      "assoc":"Browse associated works"
+      "assoc":"Associated works"
    },
    "mirador": {
       "return": "回到BUDA",
