handle navigation inside node children in outline (#387)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -532,7 +532,9 @@
       "location1": " (v. {{vol}}, img. {{page}})",
       "locationM": " (v. {{vol}}, img. {{page}}-{{endPage}})",
       "location1vol1": " (img. {{page}})",
-      "location1volM": " (img. {{page}}-{{endPage}})"
+      "location1volM": " (img. {{page}}-{{endPage}})",
+      "showPnodes":"Previous",
+      "showNnodes":"Next"
    },
    "mirador": {
       "return": "return to BUDA",
