--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -236,7 +236,10 @@
       "assoc": "{{type}} associated with: <res href='/show/{{- rid}}'>{{- name}}<\/res>",
       "moreres": "More {{txt}} are cataloged, do you want to see them?",
       "inEtext": "Results for <key>{{- keyword}}<\/key> <key>[{{language}}]<\/key><br/>in <res href='/show/{{- rid}}'>{{- name}}<\/res>",
-      "openO": "Open in Outline"
+      "openO": "Open in Outline",
+      "bdDate":"{{birth}} – {{death}}",
+      "bDate":"b. {{num}}",
+      "dDate":"d. {{num}}"
    },
    "map": {
       "touch": "Use two fingers to move the map",
