--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -196,7 +196,10 @@
       "moreres": "是否想阅览更多的{{txt}}？",
       "openEin": "Open in Etext",
       "inEtext": "Results for <key>{{- keyword}}<\/key> <key>[{{language}}]<\/key><br/>in <res href='/show/{{- rid}}'>{{- name}}<\/res>",
-      "openO": "Open in Outline"
+      "openO": "Open in Outline",
+      "bdDate":"{{birth}} – {{death}}",
+      "bDate":"b. {{num}}",
+      "dDate":"d. {{num}}"
    },
    "map": {
       "touch": "Use two fingers to move the map",
