--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -346,7 +346,10 @@
       "seeI": "See {{count}} version",
       "seeI_plural": "See {{count}} versions",
       "seeM": "{{count}} more version available",
-      "seeM_plural": "{{count}} more versions available"
+      "seeM_plural": "{{count}} more versions available",
+      "card": "{{num}}",
+      "inter": "{{min}}~{{max}}",
+      "ordInter": "{{min}}-{{max,ordinal}} c."
    },
    "lang": {
       "en": "English",
