--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -239,6 +239,7 @@
       "openO": "Open in Outline",
       "bdDate":"{{birth}} – {{death}}",
       "bDate":"b. {{num}}",
+      "bDateCentury":"b. {{num}}",
       "dDate":"d. {{num}}",
       "fDate":"fl. {{num}}"
    },
