update cookie consent text + move to translation files (#576)

--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -6,6 +6,11 @@
       "lpar": "（",
       "rpar": "）"
    },
+   "cookies":{
+      "message":"This website uses a third party cookie to collect anonymous usage statistics and enhance the user experience (Google Analytics).",
+      "yes":"I agree",
+      "no":"I decline"
+   },
    "home": {
       "BUDA": "BUDA（佛教通用数字档案馆）",
       "titleBDRC1": "佛教",
