--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -6,6 +6,11 @@
       "lpar": "（",
       "rpar": "）"
    },
+   "cookies":{
+      "message":"This website uses a third party cookie to collect anonymous usage statistics and enhance the user experience (Google Analytics).",
+      "yes":"I agree",
+      "no":"I decline"
+   },
    "home": {
       "BUDA": "བུདྡྷ།",
       "titleBDRC1": "ནང་བསྟན་b",
