--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -69,7 +69,8 @@
       "history": "བཙལ་བའི་ལོ་རྒྱུས།",
       "bookmarks": "དཔེ་རྟགས།",
       "results": "བཙལ་འབྲས་ནང་འཚོལ།",
-      "instances": "བརྩམས་ཆོས།"
+      "instances": "བརྩམས་ཆོས།",
+      "proxied":"This is a proxied version provided by your institution's\nlibrary subscription; login is disabled. If you are part\nof a subscribing institution, you can download PDFs of\ntexts in the subscribed collections."
    },
    "Lsidebar": {
       "sortBy": {
