--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -61,7 +61,8 @@
       "history": "搜索历史",
       "bookmarks": "收藏夹",
       "results": "的搜索结果",
-      "instances": "实例所属作品"
+      "instances": "实例所属作品",
+      "proxied":"This is a proxied version provided by your institution's\nlibrary subscription; login is disabled. If you are part\nof a subscribing institution, you can download PDFs of\ntexts in the subscribed collections."
    },
    "Lsidebar": {
       "sortBy": {
