--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -70,7 +70,7 @@
       "bookmarks": "དཔེ་རྟགས།",
       "results": "བཙལ་འབྲས་ནང་འཚོལ།",
       "instances": "བརྩམས་ཆོས།",
-      "proxied":"This is a proxied version provided by your institution's\nlibrary subscription; login is disabled. If you are part\nof a subscribing institution, you can download PDFs of\ntexts in the subscribed collections."
+      "proxied":"This is a proxied version provided by your institution's library subscription; login is disabled. If you are part of a subscribing institution, you can download PDFs of texts in the subscribed collections. If you have an account and wish to use it, please go to <tag href='https://library.bdrc.io' target='_blank'>https://library.bdrc.io<\/tag>"
    },
    "Lsidebar": {
       "sortBy": {
